[gd_scene load_steps=4 format=2]

[ext_resource path="res://fly-d-M-Qi-agRdFs-unsplash.jpg" type="Texture" id=1]
[ext_resource path="res://panel.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 264, 400 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Image" type="Sprite" parent="."]
position = Vector2( 264.6, 398.8 )
scale = Vector2( 0.0997738, 0.100302 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="Image"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Image/Area2D"]
visible = false
scale = Vector2( 10, 10 )
shape = SubResource( 1 )

[node name="Button_zoom_in" type="Button" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 48.0
margin_bottom = 48.0
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_zoom_out" type="Button" parent="."]
margin_left = 16.0
margin_top = 56.0
margin_right = 48.0
margin_bottom = 88.0
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_draw_rect" type="Button" parent="."]
margin_left = 16.0
margin_top = 96.0
margin_right = 48.0
margin_bottom = 128.0
text = "r"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_draw_text" type="Button" parent="."]
margin_left = 16.0
margin_top = 136.0
margin_right = 48.0
margin_bottom = 168.0
text = "T"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Image_attribution" type="Label" parent="."]
margin_left = 8.0
margin_top = 584.0
margin_right = 490.0
margin_bottom = 598.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Image attribution: FLY:D via unsaplash (accessed 5/10/21)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Zoom_factor_text" type="Label" parent="."]
margin_left = 56.0
margin_top = 16.0
margin_right = 128.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Zoom: 1x"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="input_event" from="Image/Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="pressed" from="Button_zoom_in" to="." method="_on_Button_zoom_in_pressed"]
[connection signal="pressed" from="Button_zoom_out" to="." method="_on_Button_zoom_out_pressed"]
[connection signal="pressed" from="Button_draw_rect" to="." method="_on_Button_draw_rect_pressed"]
[connection signal="pressed" from="Button_draw_text" to="." method="_on_Button_draw_text_pressed"]
